--- a/Pomodoro-chrome-extension-master/manifest.json
+++ b/Pomodoro-chrome-extension-master/manifest.json
@@ -1,27 +1,27 @@
 {
-  "name": "Pomo",
-  "version": "0.0.1",
-  "manifest_version": 2,
-  "description": "A nifty pomodoro productivity app!",
+  "name": 
+  "version": 
+  "manifest_version": 
+  "description": 
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "scripts": 
+    "persistent": 
   },
   "browser_action": {
-    "default_popup": "popup/popup.html",
-    "js": ["jquery.js"]
+    "default_popup": 
+    "js": 
   },
   "options_ui": {
-    "page": "popup/options/options.html",
-    "scripts": ["popup/options/options.js"],
-    "open_in_tab": false
+    "page": 
+    "scripts": 
+    "open_in_tab": 
   },
-  "permissions": ["storage"],
+  "permissions": 
   "icons": {
-    "16": "icons/CRW-16.png",
-    "20": "icons/CRW-20.png",
-    "32": "icons/CRW-32.png",
-    "48": "icons/CRW-48.png",
-    "128": "icons/CRW-128.png"
+    "16": 
+    "20": 
+    "32": 
+    "48": 
+    "128": 
   }
 }
